--- a/public/index.html
+++ b/public/index.html
@@ -2,40 +2,51 @@
 <html lang="en">
   <head>
     <meta charset="utf-8" />
-    <link rel="shortcut icon" href="%PUBLIC_URL%/favicon.ico" />
-    <meta
-      name="viewport"
-      content="width=device-width, initial-scale=1, shrink-to-fit=no"
-    />
-    <meta name="theme-color" content="#000000" />
-    <!--
-      manifest.json provides metadata used when your web app is added to the
-      homescreen on Android. See https://developers.google.com/web/fundamentals/web-app-manifest/
-    -->
-    <link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
-    <!--
-      Notice the use of %PUBLIC_URL% in the tags above.
-      It will be replaced with the URL of the `public` folder during the build.
-      Only files inside the `public` folder can be referenced from the HTML.
-
-      Unlike "/favicon.ico" or "favicon.ico", "%PUBLIC_URL%/favicon.ico" will
-      work correctly both with client-side routing and a non-root public URL.
-      Learn how to configure a non-root public URL by running `npm run build`.
-    -->
-    <title>React App</title>
+    <link rel="shortcut icon" href="/favicon.ico" />
+    <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no" />
+    <meta name="description" content="Guide to vegan eating in Kitchener Waterloo Cambridge and Guelph Ontario">
+    <meta name="keywords" content="vegan,vegetarian,restaurants,kitchener,waterloo,cambridge,guelph,bakeries,restaurants,markets,health,catering,delivery">
+    <meta name="author" content="Andrew Aaron">
+    <link rel="apple-touch-icon" sizes="180x180" href="/apple-touch-icon.png">
+    <link rel="icon" type="image/png" sizes="32x32" href="/favicon-32x32.png">
+    <link rel="icon" type="image/png" sizes="16x16" href="/favicon-16x16.png">
+    <link rel="manifest" href="/site.webmanifest">
+    <link rel="mask-icon" href="/safari-pinned-tab.svg" color="#5bbad5">
+    <meta name="msapplication-TileColor" content="#da532c">
+    <meta name="theme-color" content="#ffffff">
+    <link rel="manifest" href="/manifest.json" />
+    <title>Cambridge Guelph Kitchener Waterloo Veg Guide</title>
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
+    <header>
+      <h1>
+        Veg Guide
+      </h1>
+      <nav>
+        <ul>
+          <li><a href="/">Home</a></li>
+          <li><a href="/directory">Directory</a></li>
+          <li><a href="/donate">Donate</a></li>
+        </ul>
+      </nav>
+    </header>
+    <main>
+      <section>
+          <div style="text-align:center">
+            <a href="/VegGuide2019.pdf"><img src="/cover.jpg" alt="VegGuide cover" style="width: 300px" /><br>
+            Download Veg Guide PDF</a>
+          </div>        
+      </section>
+      <section>
+        <h2>Contact</h2>
+        <div>
+          <p>Thank you to all those on Facebook who helped encourage and contribute to this project.</p>
+          <p>You can now submit changes and new listings in the Directory</p>
+          <p>For VegGuide copies, advertising inquiries, and any other questions, please email <a href="mailto:cgkwvegguide@gmail.com">cgkwvegguide@gmail.com</a></p>
+        </div>
+      </section>
+    </main>
     <div id="root"></div>
-    <!--
-      This HTML file is a template.
-      If you open it directly in the browser, you will see an empty page.
-
-      You can add webfonts, meta tags, or analytics to this file.
-      The build step will place the bundled scripts into the <body> tag.
-
-      To begin the development, run `npm start` or `yarn start`.
-      To create a production bundle, use `npm run build` or `yarn build`.
-    -->
   </body>
 </html>
