make table prettier

--- a/public/directory.html
+++ b/public/directory.html
@@ -13,6 +13,7 @@
     <link rel="shortcut icon" href="/favicon.ico" />
     <link rel="stylesheet" href="/index.css" type="text/css" />
     <link href="https://fonts.googleapis.com/css?family=Lato" rel="stylesheet">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.css" />
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no" />
     <meta name="description" content="Guide to vegan eating in Kitchener Waterloo Cambridge and Guelph Ontario">
     <meta name="keywords" content="vegan,vegetarian,restaurants,kitchener,waterloo,cambridge,guelph,bakeries,restaurants,markets,health,catering,delivery">
